--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
     <body>
         <h1 class="headerBanner">Brynnleigh Weaver</h1>
-        <img src="pic1.JPG">
+        <img src="pic1.jpg">
         <p class="p1">Brynnleigh is a sophmore at Papillion LaVista South High School.</p>
             <ul>
                 <li>Brynnleigh loves animals and reading books</li>
